# pydddcore

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci-workflow.yml
src/dddcore/: core.py
src/pydddcore/: __init__.py  core.py
tests/: test_dddcore.py  testdddcore.py
