[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

# Use these 2 commands to build dist of package to confirm before making github release.
# py -m pip install --upgrade build
# py -m build
# Source: https://packaging.python.org/en/latest/tutorials/packaging-projects/

[tool.poetry]
name = "pydddcore"
version = "1.0.1"
description = "Python based Domain Driven Design (DDD) building blocks.."
authors = ["Kapil Dhaimade <kapil.dhaimade@live.com>"]
homepage = "https://github.com/kapil-dhaimade/pydddcore"
# https://stackoverflow.com/questions/69230525/why-does-poetry-build-raise-moduleorpackagenotfound-exception
# needed when src hierarchy is nested for build sys to find modules.
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-mock = "^3.3.0"

# This section needed for GitHub actions to run pytest, else 
# it does not find our module from tests folder.
# Src: https://stackoverflow.com/questions/54895002/modulenotfounderror-with-pytest
[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]